--- a/index.html
+++ b/index.html
@@ -125,8 +125,30 @@
               quaerat, sed repudiandae, blanditiis, magni assumenda officia iste
               quo harum! Earum, architecto veritatis.
             </p>
-            <div class="video-box d-flex align-items-center gap-3">
-              <i class="ri-play-circle-fill"></i>
+            <input
+              type="checkbox"
+              class="nav-checkbox"
+              hidden
+              name=""
+              id="nav-input"
+            />
+            <label for="nav-input" class="overlay"></label>
+            <label for="nav-input" class="ri-close-line close-btn"></label>
+            <div class="video-player">
+              <iframe
+                width="100%"
+                height="660px"
+                src="https://www.youtube.com/embed/FJFAqfh9LG8"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              ></iframe>
+            </div>
+            <div
+              for="nav-input"
+              class="video-box d-flex align-items-center gap-3"
+            >
+              <label for="nav-input"
+                ><i class="ri-play-circle-fill btn-play"></i
+              ></label>
               <h5 class="text-box">Xem chúng tôi làm việc ở Minh Hoang</h5>
             </div>
           </div>
@@ -136,24 +158,10 @@
               alt=""
               class="team-img"
             />
-            <img
-              src="./assets/images/all/section_bg_01.png"
-              alt=""
-              class="circle-img"
-            />
+            <img src="./assets/images/all/img3.png" alt="" class="circle-img" />
           </div>
         </div>
       </div>
-      <div class="video-player">
-        <iframe
-          width="100%"
-          height="600px"
-          src="https://www.youtube.com/embed/5zKQrgkOL2g"
-        ></iframe>
-        <label for="nav-input" class="ri-close-line close-btn"></label>
-      </div>
-      <input type="checkbox" class="nav-checkbox" name="" id="nav-input" />
-      <div class="overlay"></div>
     </section>
     <!--Services-->
     <section id="services-area">
@@ -226,42 +234,51 @@
         <div class="row justify-content-between">
           <div class="col-lg-4 services-wrapper">
             <div class="services-box">
-              <h3 class="services-title">Acknowledge and companion</h3>
+              <h3 class="services-title">
+                Am hiểu <br />
+                và đồng hành
+              </h3>
               <p class="services-text">
-                As a software development company with extensive experience in
-                managing large projects, organizing processes and applying
-                tools, Minh Hoang is able to analyze and understand all customer
-                needs and problems, advise on The most optimal choice solution
-                and companion from the time the need arises to after the product
-                is handed over.
+                Với thế mạnh nhiều kinh nghiệm triển khai vận hành khai thác cho
+                các hệ thống lớn, Minh Hoang không chỉ phát triển phần mềm mà
+                còn tư vấn, hỗ trợ khách hàng xây dựng một giải pháp tổng thể
+                bao gồm: phân tích hệ thống, tư vấn kiến trúc, xây dựng giải
+                pháp; xây dựng bài toán đầu tư, lộ trình phát triển sản phẩm,
+                cắt chuyển, tích hợp, đào tạo vận hành.đề của khách hàng để tư
+                vấn được
               </p>
               <a href="#" class="btn-arrow ri-arrow-right-line"></a>
             </div>
           </div>
           <div class="col-lg-4 services-wrapper">
             <div class="services-box">
-              <h3 class="services-title">Acknowledge and companion</h3>
+              <h3 class="services-title">
+                Linh hoạt <br />
+                & hiệu quả
+              </h3>
               <p class="services-text">
-                As a software development company with extensive experience in
-                managing large projects, organizing processes and applying
-                tools, Minh Hoang is able to analyze and understand all customer
-                needs and problems, advise on The most optimal choice solution
-                and companion from the time the need arises to after the product
-                is handed over.
+                Với thế mạnh nhiều kinh nghiệm triển khai vận hành khai thác cho
+                các hệ thống lớn, Minh Hoang không chỉ phát triển phần mềm mà
+                còn tư vấn, hỗ trợ khách hàng xây dựng một giải pháp tổng thể
+                bao gồm: phân tích hệ thống, tư vấn kiến trúc, xây dựng giải
+                pháp; xây dựng bài toán đầu tư, lộ trình phát triển sản phẩm,
+                cắt chuyển, tích hợp, đào tạo vận hành.đề của khách hàng để tư
+                vấn được
               </p>
               <a href="#" class="btn-arrow ri-arrow-right-line"></a>
             </div>
           </div>
           <div class="col-lg-4 services-wrapper">
             <div class="services-box">
-              <h3 class="services-title">Acknowledge and companion</h3>
+              <h3 class="services-title">Dịch vụ trọn gói</h3>
               <p class="services-text">
-                As a software development company with extensive experience in
-                managing large projects, organizing processes and applying
-                tools, Minh Hoang is able to analyze and understand all customer
-                needs and problems, advise on The most optimal choice solution
-                and companion from the time the need arises to after the product
-                is handed over.
+                Với thế mạnh nhiều kinh nghiệm triển khai vận hành khai thác cho
+                các hệ thống lớn, Minh Hoang không chỉ phát triển phần mềm mà
+                còn tư vấn, hỗ trợ khách hàng xây dựng một giải pháp tổng thể
+                bao gồm: phân tích hệ thống, tư vấn kiến trúc, xây dựng giải
+                pháp; xây dựng bài toán đầu tư, lộ trình phát triển sản phẩm,
+                cắt chuyển, tích hợp, đào tạo vận hành.đề của khách hàng để tư
+                vấn được giải pháp tối ưu trong thời gian nhanh nhất
               </p>
               <a href="#" class="btn-arrow ri-arrow-right-line"></a>
             </div>
@@ -272,47 +289,47 @@
     <!--Strengths-->
     <section id="strengths">
       <div class="container">
-        <h2 class="header-title">Areas of strength</h2>
+        <h2 class="header-title">Lĩnh vực thế mạnh</h2>
         <div class="row">
-          <div class="col-lg-2 tab">
+          <div class="col-lg-2 tab active">
             <div class="timetab-heading">
               <i class="ri-macbook-line"></i>
               <p class="tab-title">Telcos</p>
             </div>
           </div>
-          <div class="col-lg-2">
+          <div class="col-lg-2 tab">
             <div class="timetab-heading">
               <i class="ri-shopping-cart-2-line"></i>
               <p class="tab-title">Sales & Market</p>
             </div>
           </div>
-          <div class="col-lg-2">
+          <div class="col-lg-2 tab">
             <div class="timetab-heading">
               <i class="ri-time-line"></i>
               <p class="tab-title">Customer</p>
             </div>
           </div>
-          <div class="col-lg-2">
+          <div class="col-lg-2 tab">
             <div class="timetab-heading">
               <i class="ri-window-line"></i>
               <p class="tab-title">IoT</p>
             </div>
           </div>
-          <div class="col-lg-2">
+          <div class="col-lg-2 tab">
             <div class="timetab-heading">
               <i class="ri-currency-line"></i>
               <p class="tab-title">Finance</p>
             </div>
           </div>
-          <div class="col-lg-2">
+          <div class="col-lg-2 tab">
             <div class="timetab-heading">
               <i class="ri-focus-2-line"></i>
-              <p class="tab-title">Telcos</p>
+              <p class="tab-title">Digital Engagement</p>
             </div>
           </div>
         </div>
         <div class="timetab-data">
-          <div class="timetab-container">
+          <div class="timetab-container active">
             <div class="row">
               <div class="col-lg-6 py-4">
                 <div class="timetab-img">
@@ -322,7 +339,7 @@
               <div class="col-lg-6">
                 <div class="timetab-info">
                   <h4 class="timetab-title">Telcos</h4>
-                  <p>Systems</p>
+                  <p>Các hệ thống</p>
                   <ul>
                     <li>Sales Management</li>
                     <li>Customer Management</li>
@@ -333,10 +350,270 @@
               </div>
             </div>
           </div>
+          <div class="timetab-container">
+            <div class="row">
+              <div class="col-lg-6 py-4">
+                <div class="timetab-img">
+                  <img src="./assets/images/all/sale-img.png" alt="" />
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div class="timetab-info">
+                  <h4 class="timetab-title">Sales & Market</h4>
+                  <p>Các hệ thống</p>
+                  <ul>
+                    <li>Revenue Management</li>
+                    <li>Notification Management Gateway</li>
+                    <li>Commission Management</li>
+                    <li>Stock Management</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="timetab-container">
+            <div class="row">
+              <div class="col-lg-6 py-4">
+                <div class="timetab-img">
+                  <img src="./assets/images/all/customer-img.png" alt="" />
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div class="timetab-info">
+                  <h4 class="timetab-title">Customer</h4>
+                  <p>Các hệ thống</p>
+                  <ul>
+                    <li>Customers Management</li>
+                    <li>Profile</li>
+                    <li>Digital Contract Gateway</li>
+                    <li>Loyalty</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="timetab-container">
+            <div class="row">
+              <div class="col-lg-6 py-4">
+                <div class="timetab-img">
+                  <img src="./assets/images/all/Iot-img.png" alt="" />
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div class="timetab-info">
+                  <h4 class="timetab-title">IoT</h4>
+                  <p>Các hệ thống</p>
+                  <ul>
+                    <li>Service Problem Management</li>
+                    <li>Video call for Smart watch</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="timetab-container">
+            <div class="row">
+              <div class="col-lg-6 py-4">
+                <div class="timetab-img">
+                  <img src="./assets/images/all/finance.png" alt="" />
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div class="timetab-info">
+                  <h4 class="timetab-title">Finance</h4>
+                  <p>Các hệ thống</p>
+                  <ul>
+                    <li>eWallet Core</li>
+                    <li>PayGate</li>
+                    <li>eWallet (Mobile/Web/USSD)</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="timetab-container">
+            <div class="row">
+              <div class="col-lg-6 py-4">
+                <div class="timetab-img">
+                  <img src="./assets/images/all/digital-img.png" alt="" />
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div class="timetab-info">
+                  <h4 class="timetab-title">Digital Engagement</h4>
+                  <p>Các hệ thống</p>
+                  <ul>
+                    <li>Customer Experience Management</li>
+                    <li>Event Management</li>
+                    <li>MobileID</li>
+                    <li>LiveTV</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--Technology-->
+    <section id="technology">
+      <div class="technology-content">
+        <div class="container">
+          <h2 class="technology-title text-center">Công nghệ của chúng tôi</h2>
+          <div class="row d-flex align-items-center">
+            <div class="col-lg-3">
+              <div class="technology-box">
+                <img src="./assets/images/technology/android-img.png" alt="" />
+              </div>
+            </div>
+            <div class="col-lg-3">
+              <div class="technology-box">
+                <img
+                  src="./assets/images/technology/Bootstrap-img.png"
+                  alt=""
+                />
+              </div>
+            </div>
+            <div class="col-lg-3">
+              <div class="technology-box">
+                <img src="./assets/images/technology/node-img.png" alt="" />
+              </div>
+            </div>
+            <div class="col-lg-3">
+              <div class="technology-box">
+                <img
+                  src="./assets/images/technology/wordPress-img.png"
+                  alt=""
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--Contacts-->
+    <section id="contacts">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 contact-form">
+            <div class="content">
+              <div class="content-heading">
+                <h2>Cần giúp đỡ?</h2>
+                <p>
+                  Tiếp cận với các dịch vụ CNTT đáng tin cậy nhất trên thế giới.
+                </p>
+              </div>
+              <form action="" class="contact-form">
+                <div class="row">
+                  <div class="col-lg-6">
+                    <div class="form-group">
+                      <input
+                        class="form-control"
+                        id="name"
+                        name="name"
+                        type="text"
+                        placeholder="Name"
+                      />
+                    </div>
+                  </div>
+                  <div class="col-lg-6">
+                    <div class="form-group">
+                      <input
+                        class="form-control"
+                        id="email"
+                        name="email"
+                        type="email"
+                        placeholder="Email*"
+                      />
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-lg-12">
+                    <div class="form-group">
+                      <input
+                        class="form-control"
+                        id="phone"
+                        name="phone"
+                        type="text"
+                        placeholder="Phone"
+                      />
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-lg-12">
+                    <div class="form-group">
+                      <textarea
+                        name="comments"
+                        id="comments"
+                        placeholder="Please describe what you need."
+                      ></textarea>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-lg-12">
+                    <button type="submit">Submit</button>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+          <div class="col-lg-6 info">
+            <div class="contact-tabs">
+              <ul class="nav nav-tabs">
+                <li class="nav-item">
+                  <a href="" class="nav-link active">Địa chỉ</a>
+                </li>
+                <li class="nav-item">
+                  <a href="" class="nav-link">Bản đồ Google</a>
+                </li>
+              </ul>
+              <div class="tabsContent">
+                <div id="tab1" class="tab-pane fade active show">
+                  <ul>
+                    <li>
+                      <div class="icon">
+                        <i class="ri-map-pin-fill"></i>
+                      </div>
+                      <div class="info">
+                        <p>Địa chỉ</p>
+                        <span>Tầng 3, Tecco</span>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="icon">
+                        <i class="ri-mail-open-fill"></i>
+                      </div>
+                      <div class="info">
+                        <p>Email</p>
+                        <span>abc@gmail.com</span>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="icon">
+                        <i class="ri-phone-fill"></i>
+                      </div>
+                      <div class="info">
+                        <p>Điện thoại</p>
+                        <span>09432452</span>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+                <div id="tab2" class="tab-pane fade">
+                  <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3709.7645818368464!2d105.8338198153381!3d21.595110573577436!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x313526e159742cd5%3A0x247f636ad25a8e22!2zdGVjY28gUGjhu6cgTGnhu4Vu!5e0!3m2!1svi!2s!4v1638008713981!5m2!1svi!2s"
+                  ></iframe>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
     <!-- <script src="./assets/js/bootstrap.min.js"></script> -->
-    <!-- <script src="./assets/js/main.js"></script> -->
+    <script src="./assets/js/main.js"></script>
   </body>
 </html>
