--- a/index.html
+++ b/index.html
@@ -545,6 +545,7 @@
                   <div class="col-lg-12">
                     <div class="form-group">
                       <textarea
+                        class="form-control"
                         name="comments"
                         id="comments"
                         placeholder="Please describe what you need."
@@ -554,7 +555,7 @@
                 </div>
                 <div class="row">
                   <div class="col-lg-12">
-                    <button type="submit">Submit</button>
+                    <button type="submit" class="btn-submit">Submit</button>
                   </div>
                 </div>
               </form>
@@ -564,14 +565,15 @@
             <div class="contact-tabs">
               <ul class="nav nav-tabs">
                 <li class="nav-item">
-                  <a href="" class="nav-link active">Địa chỉ</a>
+                  <div  class="nav-link active">Địa chỉ</div>
                 </li>
                 <li class="nav-item">
-                  <a href="" class="nav-link">Bản đồ Google</a>
+                  <div class="nav-link">Bản đồ Google</div>
                 </li>
+                <div class="line"></div>
               </ul>
               <div class="tabsContent">
-                <div id="tab1" class="tab-pane fade active show">
+                <div id="tab1" class="tab-pane active">
                   <ul>
                     <li>
                       <div class="icon">
@@ -602,7 +604,7 @@
                     </li>
                   </ul>
                 </div>
-                <div id="tab2" class="tab-pane fade">
+                <div id="tab2" class="tab-pane">
                   <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3709.7645818368464!2d105.8338198153381!3d21.595110573577436!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x313526e159742cd5%3A0x247f636ad25a8e22!2zdGVjY28gUGjhu6cgTGnhu4Vu!5e0!3m2!1svi!2s!4v1638008713981!5m2!1svi!2s"
                   ></iframe>
@@ -613,6 +615,7 @@
         </div>
       </div>
     </section>
+    .
     <!-- <script src="./assets/js/bootstrap.min.js"></script> -->
     <script src="./assets/js/main.js"></script>
   </body>
