--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
           <div class="fullwidth-wrapper">
             <div class="main-menu">
               <div class="row align-items-center">
-                <div class="col-lg-2 text-white">
+                <div class="col-lg-2 col-md-6 header-box text-white">
                   <div class="logo-area">
                     <a href="#"
                       ><img src="./assets/images/logo/logo-img.png" alt=""
                     /></a>
                   </div>
                 </div>
-                <div class="col-lg-10 text-white">
+                <div class="col-lg-10 col-md-6 header-box text-white">
                   <nav class="rs-menu">
                     <ul class="nav-menu">
                       <li>
@@ -52,6 +52,11 @@
                       </li>
                     </ul>
                   </nav>
+                  <div class="menu-mobile">
+                    <button type="button" class="nav-toggle">
+                      <span></span>
+                    </button>
+                  </div>
                 </div>
               </div>
             </div>
@@ -77,12 +82,12 @@
         <div class="info-content">
           <div class="container">
             <div class="row">
-              <div class="col-lg-3 d-flex align-items-center info-box">
+              <div class="col-lg-3 col-md-6 d-flex align-items-center info-box">
                 <i class="ri-macbook-line"></i>
                 <h3 class="info-title">Phát triển phần mềm</h3>
                 <i class="ri-arrow-right-line"></i>
               </div>
-              <div class="col-lg-3 d-flex align-items-center info-box">
+              <div class="col-lg-3 col-md-6 d-flex align-items-center info-box">
                 <i class="ri-lock-unlock-line"></i>
                 <h3 class="info-title">
                   Dịch vụ <br />
@@ -90,7 +95,7 @@
                 </h3>
                 <i class="ri-arrow-right-line"></i>
               </div>
-              <div class="col-lg-3 d-flex align-items-center info-box">
+              <div class="col-lg-3 col-md-6 d-flex align-items-center info-box">
                 <i class="ri-window-line"></i>
                 <h3 class="info-title">
                   Tư vấn <br />
@@ -98,7 +103,7 @@
                 </h3>
                 <i class="ri-arrow-right-line"></i>
               </div>
-              <div class="col-lg-3 d-flex align-items-center info-box">
+              <div class="col-lg-3 col-md-6 d-flex align-items-center info-box">
                 <i class="ri-pencil-fill"></i>
                 <h3 class="info-title">Sản phẩm Atlassian</h3>
                 <i class="ri-arrow-right-line"></i>
@@ -111,8 +116,8 @@
     <!--About Us-->
     <section id="about-us">
       <div class="container">
-        <div class="row d-flex justify-content-between">
-          <div class="col-lg-6 about-left">
+        <div class="row about-content">
+          <div class="col-lg-6 col-md-12 about-left">
             <span>Về chúng tôi</span>
             <h2>Dịch vụ phát triển phần mềm linh hoạt</h2>
             <p class="about-description">
@@ -171,8 +176,8 @@
           <h2 class="service-title">Chúng tôi làm</h2>
         </div>
         <div class="service-item text-center">
-          <div class="row">
-            <div class="col-lg-3 single-item">
+          <div class="row service-box">
+            <div class="col-lg-3 col-md-6 single-item">
               <div class="item">
                 <div class="info">
                   <h4>Dịch vụ IT</h4>
@@ -185,7 +190,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-3 col-md-6">
               <div class="item">
                 <div class="info">
                   <h4>Giải pháp</h4>
@@ -198,7 +203,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-3 col-md-6">
               <div class="item">
                 <div class="info">
                   <h4>Phân tích</h4>
@@ -211,7 +216,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-3 col-md-6">
               <div class="item">
                 <div class="info">
                   <h4>Dịch vụ IT</h4>
@@ -231,8 +236,8 @@
     <section class="block-content text-white">
       <div class="container">
         <h2 class="heading-title text-center mb-5">Tại sao chọn Minh Hoang?</h2>
-        <div class="row justify-content-between">
-          <div class="col-lg-4 services-wrapper">
+        <div class="row justify-content-between block-content-box">
+          <div class="col-lg-4 col-ms-12 services-wrapper">
             <div class="services-box">
               <h3 class="services-title">
                 Am hiểu <br />
@@ -290,38 +295,38 @@
     <section id="strengths">
       <div class="container">
         <h2 class="header-title">Lĩnh vực thế mạnh</h2>
-        <div class="row">
-          <div class="col-lg-2 tab active">
+        <div class="row strengths-box">
+          <div class="col-lg-2 col-md-4 tab active">
             <div class="timetab-heading">
               <i class="ri-macbook-line"></i>
               <p class="tab-title">Telcos</p>
             </div>
           </div>
-          <div class="col-lg-2 tab">
+          <div class="col-lg-2 col-md-4 tab">
             <div class="timetab-heading">
               <i class="ri-shopping-cart-2-line"></i>
               <p class="tab-title">Sales & Market</p>
             </div>
           </div>
-          <div class="col-lg-2 tab">
+          <div class="col-lg-2 col-md-4 tab">
             <div class="timetab-heading">
               <i class="ri-time-line"></i>
               <p class="tab-title">Customer</p>
             </div>
           </div>
-          <div class="col-lg-2 tab">
+          <div class="col-lg-2 col-md-4 tab">
             <div class="timetab-heading">
               <i class="ri-window-line"></i>
               <p class="tab-title">IoT</p>
             </div>
           </div>
-          <div class="col-lg-2 tab">
+          <div class="col-lg-2 col-md-4 tab">
             <div class="timetab-heading">
               <i class="ri-currency-line"></i>
               <p class="tab-title">Finance</p>
             </div>
           </div>
-          <div class="col-lg-2 tab">
+          <div class="col-lg-2 col-md-4 tab">
             <div class="timetab-heading">
               <i class="ri-focus-2-line"></i>
               <p class="tab-title">Digital Engagement</p>
@@ -460,13 +465,13 @@
       <div class="technology-content">
         <div class="container">
           <h2 class="technology-title text-center">Công nghệ của chúng tôi</h2>
-          <div class="row d-flex align-items-center">
-            <div class="col-lg-3">
+          <div class="row d-flex align-items-center technology-box">
+            <div class="col-lg-3 col-md-6">
               <div class="technology-box">
                 <img src="./assets/images/technology/android-img.png" alt="" />
               </div>
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-3 col-md-6">
               <div class="technology-box">
                 <img
                   src="./assets/images/technology/Bootstrap-img.png"
@@ -474,12 +479,12 @@
                 />
               </div>
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-3 col-md-6">
               <div class="technology-box">
                 <img src="./assets/images/technology/node-img.png" alt="" />
               </div>
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-3 col-md-6">
               <div class="technology-box">
                 <img
                   src="./assets/images/technology/wordPress-img.png"
@@ -494,7 +499,7 @@
     <!--Contacts-->
     <section id="contacts">
       <div class="container">
-        <div class="row">
+        <div class="row contacts-box">
           <div class="col-lg-6 contact-form">
             <div class="content">
               <div class="content-heading">
@@ -505,7 +510,7 @@
               </div>
               <form action="" class="contact-form">
                 <div class="row">
-                  <div class="col-lg-6">
+                  <div class="col-lg-6 col-md-6">
                     <div class="form-group">
                       <input
                         class="form-control"
@@ -516,7 +521,7 @@
                       />
                     </div>
                   </div>
-                  <div class="col-lg-6">
+                  <div class="col-lg-6 col-md-6">
                     <div class="form-group">
                       <input
                         class="form-control"
@@ -615,7 +620,58 @@
         </div>
       </div>
     </section>
-    .
+    <!--Footer-->
+    <footer id="footer">
+      <div class="container">
+        <div class="footer-items">
+          <div class="row">
+            <div class="col-lg-4 col-md-4">
+              <div class="footer-about">
+                <img src="./assets/images/logo/logo-img.png" alt="">
+                <p>Minh Hoang Vietnam Software Solution JSC</p>
+                <div class="footer-social">
+                  <a href=""><i class="ri-facebook-box-fill"></i></a>
+                  <a href=""><i class="ri-youtube-fill"></i></a>
+                  <a href=""><i class="ri-linkedin-box-fill"></i></a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-4 pt-4">
+              <div class="footer-item">
+                <h4 class="widget-title">Liên hệ</h4>
+                <div class="address">
+                  <ul>
+                    <li>
+                      <strong>Địa chỉ:</strong>
+                      <p>Tầng 3, Toà nhà Tecco</p>
+                    </li>
+                    <li>
+                      <strong>Email:</strong>
+                      <p>info@gmail.com</p>
+                    </li>
+                    <li>
+                      <strong>Điện thoại:</strong>
+                      <p>+84 886365481</p>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-4 pt-4">
+              <div class="footer-link">
+                <h4 class="widget-title">Dịch vụ</h4>
+                <p>Gia công phát triển phần mềm</p>
+                <p>Phát triển sản phẩm</p>
+                <p>Tư vấn & đào tạo</p>
+                <p>BPO</p>
+                <p>Sản phẩm Atlassian</p>
+                <p>Dịch vụ DevOps</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <!-- <script src="./assets/js/bootstrap.min.js"></script> -->
     <script src="./assets/js/main.js"></script>
   </body>
