--- a/index.html
+++ b/index.html
@@ -64,8 +64,12 @@
         </div>
       </header>
       <div class="slider-area">
-        <canvas id="canvas"></canvas>
-        <img src="./assets/images/banner/2.jpg" alt="" />
+        <div class="mySlider">
+          <img src="./assets/images/banner/2.jpg" alt="" />
+        </div>
+        <div class="mySlider">
+          <img src="./assets/images/banner/img1.jpg" alt="" />
+        </div>
         <div class="slider-content">
           <div class="display-table">
             <div class="display-table-cell">
@@ -570,7 +574,7 @@
             <div class="contact-tabs">
               <ul class="nav nav-tabs">
                 <li class="nav-item">
-                  <div  class="nav-link active">Địa chỉ</div>
+                  <div class="nav-link active">Địa chỉ</div>
                 </li>
                 <li class="nav-item">
                   <div class="nav-link">Bản đồ Google</div>
@@ -627,7 +631,7 @@
           <div class="row">
             <div class="col-lg-4 col-md-4">
               <div class="footer-about">
-                <img src="./assets/images/logo/logo-img.png" alt="">
+                <img src="./assets/images/logo/logo-img.png" alt="" />
                 <p>Minh Hoang Vietnam Software Solution JSC</p>
                 <div class="footer-social">
                   <a href=""><i class="ri-facebook-box-fill"></i></a>
