--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--Page Title-->
-    <title>Document</title>
+    <title>Home Page</title>
     <!--Start Stylesheet-->
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
     <!-- <link rel="stylesheet" href="./assets/css/normalize.css" /> -->
@@ -27,7 +27,7 @@
               <div class="row align-items-center">
                 <div class="col-lg-2 col-md-6 header-box text-white">
                   <div class="logo-area">
-                    <a href="#"
+                    <a href="index.html"
                       ><img src="./assets/images/logo/logo-img.png" alt=""
                     /></a>
                   </div>
@@ -45,10 +45,10 @@
                         <a href="#">Công nghệ</a>
                       </li>
                       <li>
-                        <a href="#"> Về chúng tôi</a>
+                        <a href="about.html"> Về chúng tôi</a>
                       </li>
                       <li>
-                        <a href="#">Liên hệ</a>
+                        <a href="contact.html">Liên hệ</a>
                       </li>
                     </ul>
                   </nav>
@@ -589,8 +589,11 @@
                         <i class="ri-map-pin-fill"></i>
                       </div>
                       <div class="info">
-                        <p>Địa chỉ</p>
-                        <span>Tầng 3, Tecco</span>
+                        <p>Địa chỉ:</p>
+                        <span class="lh-sm"
+                          >Tầng 3, Tecco Elite City, 1, Phù Liễn, Thành phố Thái
+                          Nguyên, Thái Nguyên, Việt Nam</span
+                        >
                       </div>
                     </li>
                     <li>
@@ -598,8 +601,8 @@
                         <i class="ri-mail-open-fill"></i>
                       </div>
                       <div class="info">
-                        <p>Email</p>
-                        <span>abc@gmail.com</span>
+                        <p>Email:</p>
+                        <span>info@gmail.com</span>
                       </div>
                     </li>
                     <li>
@@ -607,8 +610,8 @@
                         <i class="ri-phone-fill"></i>
                       </div>
                       <div class="info">
-                        <p>Điện thoại</p>
-                        <span>09432452</span>
+                        <p>Điện thoại:</p>
+                        <span> +84 094 324 525</span>
                       </div>
                     </li>
                   </ul>
