--- a/index.html
+++ b/index.html
@@ -464,6 +464,93 @@
         </div>
       </div>
     </section>
+    <!--Case Studies-->
+    <div class="case-studies-area">
+      <div class="site-heading text-center">
+        <h4>Case Studies</h4>
+        <h2>Our Work Showcase</h2>
+      </div>
+      <div class="container-fluid">
+        <div class="case-carousel">
+          <div class="owl-stage-outer">
+            <div class="owl-stage">
+              <div class="owl-item">
+                <div class="item">
+                  <div class="thumb">
+                    <img src="./assets/images/all/4.jpg" alt="" />
+                  </div>
+                  <div class="info">
+                    <div class="info-items">
+                      <div class="left-info">
+                        <h4>
+                          <a href="#">An ninh mạng</a>
+                        </h4>
+                        <ul>
+                          <li>Công nghệ</li>
+                        </ul>
+                      </div>
+                      <div class="right-info">
+                        <a href="#" class="item popup-gallery">
+                          <i class="ri-add-line"></i>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="owl-item">
+                <div class="item">
+                  <div class="thumb">
+                    <img src="./assets/images/all/5.jpg" alt="" />
+                  </div>
+                  <div class="info">
+                    <div class="info-items">
+                      <div class="left-info">
+                        <h4>
+                          <a href="#">Phân tích bảo mật</a>
+                        </h4>
+                        <ul>
+                          <li>Công nghệ</li>
+                        </ul>
+                      </div>
+                      <div class="right-info">
+                        <a href="#" class="item popup-gallery">
+                          <i class="ri-add-line"></i>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="owl-item">
+                <div class="item">
+                  <div class="thumb">
+                    <img src="./assets/images/all/6.jpg" alt="" />
+                  </div>
+                  <div class="info">
+                    <div class="info-items">
+                      <div class="left-info">
+                        <h4>
+                          <a href="#">Ứng dụng truyền thông xã hội</a>
+                        </h4>
+                        <ul>
+                          <li>Công nghệ</li>
+                        </ul>
+                      </div>
+                      <div class="right-info">
+                        <a href="#" class="item popup-gallery">
+                          <i class="ri-add-line"></i>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <!--Technology-->
     <section id="technology">
       <div class="technology-content">
@@ -627,6 +714,111 @@
         </div>
       </div>
     </section>
+    <div class="blog-area">
+      <div class="container">
+        <div class="site-heading text-center">
+          <h4>Tin tức phổ biến</h4>
+          <h2>Mới nhất từ blog của chúng tôi</h2>
+        </div>
+        <div class="blog-items">
+          <div class="row">
+            <div class="single-item col-lg-4">
+              <div class="item">
+                <div class="thumb">
+                  <a href="#"><img src="./assets/images/all/1.jpg" alt="" /></a>
+                </div>
+                <div class="info">
+                  <div class="cats">
+                    <a href="">Công nghệ</a>
+                  </div>
+                  <div class="meta">
+                    <ul>
+                      <li>
+                        <i class="ri-calendar-2-line"></i>
+                        12 Aug, 2020
+                      </li>
+                      <li>
+                        <i class="ri-user-line"></i>
+                        By
+                        <a href="">abc</a>
+                      </li>
+                    </ul>
+                  </div>
+                  <h4>
+                    <a href=""
+                      >Bổ sung trong việc truyền đạt hoặc thu thập ý kiến phản
+                      đối</a
+                    >
+                  </h4>
+                </div>
+              </div>
+            </div>
+            <div class="single-item col-lg-4">
+              <div class="item">
+                <div class="thumb">
+                  <a href="#"><img src="./assets/images/all/2.jpg" alt="" /></a>
+                </div>
+                <div class="info">
+                  <div class="cats">
+                    <a href="">Tường lửa</a>
+                  </div>
+                  <div class="meta">
+                    <ul>
+                      <li>
+                        <i class="ri-calendar-2-line"></i>
+                        05 Oct, 2020
+                      </li>
+                      <li>
+                        <i class="ri-user-line"></i>
+                        By
+                        <a href="">abc</a>
+                      </li>
+                    </ul>
+                  </div>
+                  <h4>
+                    <a href=""
+                      >Bổ sung trong việc truyền đạt hoặc thu thập ý kiến phản
+                      đối</a
+                    >
+                  </h4>
+                </div>
+              </div>
+            </div>
+            <div class="single-item col-lg-4">
+              <div class="item">
+                <div class="thumb">
+                  <a href="#"><img src="./assets/images/all/1.jpg" alt="" /></a>
+                </div>
+                <div class="info">
+                  <div class="cats">
+                    <a href="">Bảo vệ</a>
+                  </div>
+                  <div class="meta">
+                    <ul>
+                      <li>
+                        <i class="ri-calendar-2-line"></i>
+                        12 Aug, 2020
+                      </li>
+                      <li>
+                        <i class="ri-user-line"></i>
+                        By
+                        <a href="">abc</a>
+                      </li>
+                    </ul>
+                  </div>
+                  <h4>
+                    <a href=""
+                      >Bổ sung trong việc truyền đạt hoặc thu thập ý kiến phản
+                      đối</a
+                    >
+                  </h4>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <!--Footer-->
     <footer id="footer">
       <div class="container">
@@ -679,7 +871,7 @@
         </div>
       </div>
     </footer>
-    <!-- <script src="./assets/js/bootstrap.min.js"></script> -->
+    <script src="./assets/js/bootstrap.min.js"></script>
     <script src="./assets/js/main.js"></script>
   </body>
 </html>
