--- a/index.html
+++ b/index.html
@@ -870,6 +870,32 @@
           </div>
         </div>
       </div>
+      <!--Footer Bottom-->
+      <div class="footer-bottom">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6">
+              <p>
+                Copyright © 2021. Designed by
+                <a href="#">MinhHoangJSC. All Rights Reserved</a>
+              </p>
+            </div>
+            <div class="col-md-6 link">
+              <ul>
+                <li>
+                  <a href="#">Terms</a>
+                </li>
+                <li>
+                  <a href="#">Privacy</a>
+                </li>
+                <li>
+                  <a href="#">Support</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
     </footer>
     <script src="./assets/js/bootstrap.min.js"></script>
     <script src="./assets/js/main.js"></script>
